--- a/app-dev-profile/app-dev-profile/Base.lproj/Main.storyboard
+++ b/app-dev-profile/app-dev-profile/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="portrait" appearance="light"/>
+    <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,17 +12,17 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="app_dev_profile" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Devslopes BG - June 2017-1920x1080" translatesAutoresizingMaskIntoConstraints="NO" id="Wlg-Kn-Td5">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="160"/>
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="160"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="160" id="l4o-b9-9bR"/>
                                 </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="devslopesProfileLogo" translatesAutoresizingMaskIntoConstraints="NO" id="K1s-f3-GG0">
-                                <rect key="frame" x="12" y="112" width="120" height="120"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopesProfileLogo" translatesAutoresizingMaskIntoConstraints="NO" id="K1s-f3-GG0">
+                                <rect key="frame" x="20" y="120" width="110" height="110"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="Oku-VZ-ZV6"/>
                                     <constraint firstAttribute="height" constant="110" id="pU1-jm-g4M"/>
@@ -34,13 +34,56 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Devslopes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nwP-oj-2tU">
-                                <rect key="frame" x="138" y="162" width="89.333333333333314" height="26"/>
+                                <rect key="frame" x="138" y="174.5" width="108" height="31.5"/>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="23"/>
+                                </variation>
                             </label>
+                            <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="kwY-Ro-sxs">
+                                <rect key="frame" x="22" y="255" width="724" height="250"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Data Image" translatesAutoresizingMaskIntoConstraints="NO" id="aMI-zM-80g">
+                                        <rect key="frame" x="0.0" y="0.0" width="352" height="250"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="aMI-zM-80g" secondAttribute="height" multiplier="1:1" id="Deb-Rh-pC3"/>
+                                            <constraint firstAttribute="width" constant="175" id="dbE-Vr-5h7"/>
+                                        </constraints>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <mask key="constraints">
+                                                <exclude reference="Deb-Rh-pC3"/>
+                                            </mask>
+                                        </variation>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Images Image" translatesAutoresizingMaskIntoConstraints="NO" id="eVY-HU-QGy">
+                                        <rect key="frame" x="372" y="0.0" width="352" height="250"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Z92-tU-kiM">
+                                <rect key="frame" x="22" y="530" width="724" height="250"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Videos Image" translatesAutoresizingMaskIntoConstraints="NO" id="iGM-g6-sfh">
+                                        <rect key="frame" x="0.0" y="0.0" width="352" height="250"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="175" id="6oy-BP-gHk"/>
+                                            <constraint firstAttribute="width" secondItem="iGM-g6-sfh" secondAttribute="height" multiplier="1:1" id="CFX-5y-TT2"/>
+                                        </constraints>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <mask key="constraints">
+                                                <exclude reference="CFX-5y-TT2"/>
+                                            </mask>
+                                        </variation>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Code" translatesAutoresizingMaskIntoConstraints="NO" id="d2m-Zl-Cjp">
+                                        <rect key="frame" x="372" y="0.0" width="352" height="250"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="29" translatesAutoresizingMaskIntoConstraints="NO" id="7NI-jh-Kz7">
-                                <rect key="frame" x="91" y="250" width="232" height="57"/>
+                                <rect key="frame" x="516" y="166.5" width="232" height="57"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cc7-5E-d9q">
                                         <rect key="frame" x="0.0" y="0.0" width="58" height="57"/>
@@ -56,36 +99,14 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="kwY-Ro-sxs">
-                                <rect key="frame" x="22" y="332" width="370" height="175"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Data Image" translatesAutoresizingMaskIntoConstraints="NO" id="aMI-zM-80g">
-                                        <rect key="frame" x="0.0" y="0.0" width="175" height="175"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="aMI-zM-80g" secondAttribute="height" multiplier="1:1" id="Deb-Rh-pC3"/>
-                                            <constraint firstAttribute="width" constant="175" id="dbE-Vr-5h7"/>
-                                        </constraints>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Images Image" translatesAutoresizingMaskIntoConstraints="NO" id="eVY-HU-QGy">
-                                        <rect key="frame" x="195" y="0.0" width="175" height="175"/>
-                                    </imageView>
-                                </subviews>
-                            </stackView>
-                            <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Z92-tU-kiM">
-                                <rect key="frame" x="22" y="527" width="370" height="175"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Videos Image" translatesAutoresizingMaskIntoConstraints="NO" id="iGM-g6-sfh">
-                                        <rect key="frame" x="0.0" y="0.0" width="175" height="175"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="175" id="6oy-BP-gHk"/>
-                                            <constraint firstAttribute="width" secondItem="iGM-g6-sfh" secondAttribute="height" multiplier="1:1" id="CFX-5y-TT2"/>
-                                        </constraints>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Code" translatesAutoresizingMaskIntoConstraints="NO" id="d2m-Zl-Cjp">
-                                        <rect key="frame" x="195" y="0.0" width="175" height="175"/>
-                                    </imageView>
-                                </subviews>
-                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gej-7Q-Pui">
+                                <rect key="frame" x="250" y="810" width="248" height="36"/>
+                                <color key="backgroundColor" red="0.84412997960000002" green="0.28147411350000001" blue="0.117543973" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                <state key="normal" title="Customize Dashboard">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -93,24 +114,60 @@
                             <constraint firstItem="kwY-Ro-sxs" firstAttribute="top" secondItem="7NI-jh-Kz7" secondAttribute="bottom" constant="25" id="8Gv-ot-w1f"/>
                             <constraint firstItem="K1s-f3-GG0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="8r8-5Y-Iqe"/>
                             <constraint firstItem="7NI-jh-Kz7" firstAttribute="top" secondItem="K1s-f3-GG0" secondAttribute="bottom" constant="20" id="9si-iX-P1v"/>
+                            <constraint firstItem="kwY-Ro-sxs" firstAttribute="top" secondItem="K1s-f3-GG0" secondAttribute="bottom" constant="25" id="Fqe-1W-GrY"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kwY-Ro-sxs" secondAttribute="trailing" constant="22" id="J3Z-ph-QnL"/>
                             <constraint firstItem="kwY-Ro-sxs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="22" id="KBn-qZ-UvR"/>
+                            <constraint firstItem="gej-7Q-Pui" firstAttribute="top" secondItem="Z92-tU-kiM" secondAttribute="bottom" constant="30" id="O8r-Kd-5CT"/>
+                            <constraint firstItem="7NI-jh-Kz7" firstAttribute="centerY" secondItem="K1s-f3-GG0" secondAttribute="centerY" constant="20" id="RCB-Cp-Dxj"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gej-7Q-Pui" secondAttribute="trailing" constant="250" id="SN2-u1-G9Q"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7NI-jh-Kz7" secondAttribute="trailing" constant="20" id="UNI-bv-MHJ"/>
                             <constraint firstItem="K1s-f3-GG0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="YXE-3V-6BP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Z92-tU-kiM" secondAttribute="trailing" constant="22" id="Z4a-Xn-XLW"/>
                             <constraint firstItem="7NI-jh-Kz7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bOV-au-0Hu"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="nwP-oj-2tU" secondAttribute="trailing" symbolic="YES" id="cpE-Gl-Mij"/>
                             <constraint firstItem="Wlg-Kn-Td5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="kEm-w7-gbf"/>
                             <constraint firstItem="Wlg-Kn-Td5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mGE-7d-Bks"/>
                             <constraint firstItem="Wlg-Kn-Td5" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="pzV-Oe-oYp"/>
+                            <constraint firstItem="gej-7Q-Pui" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="250" id="q4W-1M-Ou0"/>
                             <constraint firstItem="Z92-tU-kiM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="22" id="riy-sp-sNX"/>
                             <constraint firstItem="nwP-oj-2tU" firstAttribute="centerY" secondItem="K1s-f3-GG0" secondAttribute="centerY" id="sZl-Fd-KGG"/>
+                            <constraint firstItem="Z92-tU-kiM" firstAttribute="top" secondItem="kwY-Ro-sxs" secondAttribute="bottom" constant="25" id="sji-jN-qU0"/>
                             <constraint firstItem="Z92-tU-kiM" firstAttribute="top" secondItem="kwY-Ro-sxs" secondAttribute="bottom" constant="20" id="vTn-v8-FKH"/>
+                            <constraint firstItem="nwP-oj-2tU" firstAttribute="centerY" secondItem="K1s-f3-GG0" secondAttribute="centerY" constant="15" id="w4Z-lf-SRF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="gej-7Q-Pui"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="w4Z-lf-SRF"/>
+                                <exclude reference="RCB-Cp-Dxj"/>
+                                <exclude reference="Fqe-1W-GrY"/>
+                                <exclude reference="sji-jN-qU0"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <mask key="subviews">
+                                <include reference="gej-7Q-Pui"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="sZl-Fd-KGG"/>
+                                <include reference="w4Z-lf-SRF"/>
+                                <exclude reference="9si-iX-P1v"/>
+                                <include reference="RCB-Cp-Dxj"/>
+                                <exclude reference="bOV-au-0Hu"/>
+                                <exclude reference="8Gv-ot-w1f"/>
+                                <include reference="Fqe-1W-GrY"/>
+                                <include reference="sji-jN-qU0"/>
+                                <exclude reference="vTn-v8-FKH"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="136.95652173913044"/>
+            <point key="canvasLocation" x="137.5" y="136.5234375"/>
         </scene>
     </scenes>
     <resources>
